# revkit

./: pyproject.toml  setup.py
ext/: cube.cpp  esop.cpp  module.cpp  types.hpp
lib/easy/easy/esop/: exact_synthesis.hpp  synthesis.hpp
test/: test_esop.py
