[tool.poetry]
name = "revkit"
version = "0.1"
description = "revkit description"
authors = ["MSoeken"]

[tool.poetry.dependencies]
python = "^3.9"



[tool.poetry.group.dev.dependencies]
pybind11 ="^2.2"
pytest = "^7.2.0"
sphinx = "^7"
sphinx-rtd-theme = "^2"
setuptools = "^70.0.0"
halo ="^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"